Changing Sway key binds.

--- a/config/firefox/newtab.html
+++ b/config/firefox/newtab.html
@@ -8,12 +8,13 @@
   <title>New tab</title>
   <style>
     :root {
-      --nord-background: #2e3440;
-      --nord-foreground: #d8dee9;
+      --nord-bg: #2e3440;
+      --nord-fg: #d8dee9;
     }
+
     body {
-      background: var(--nord-background);
-      color: var(--nord-foreground);
+      background: var(--nord-bg);
+      color: var(--nord-fg);
       padding: 60px 40px;
       text-align: center;
       font-size: 12px;
@@ -39,7 +40,7 @@
 
     a,
     a:hover {
-      color: var(--nord-foreground);
+      color: var(--nord-fg);
       display: inline-block;
       text-decoration: none;
       top: 12px;
